# test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cc  registry.cc  tui.cc  tui.h
apps/cli/src/commands/: autostart_command.cc  autostart_command.h
apps/daemon/: CMakeLists.txt
apps/daemon/src/: autostart.cc  autostart.h  config_service.h  event_hub.h  handler_context.h  liveness_probe.cc  liveness_probe.h  log_streamer.cc  log_streamer.h  main.cc  process_spawner.cc  process_spawner.h  process_supervisor.cc  process_supervisor.h  process_table.cc  process_table.h  process_types.h  restart_policy.h  router.cc  router.h  win_util.h
apps/daemon/src/services/: app_service.cc  autostart_service.cc  config_service.cc  events_service.cc  health_service.cc  process_service.cc  services.h
apps/desktop/: CMakeLists.txt
apps/desktop/frontend/: .gitignore  README.md  eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/frontend/src/: index.css  main.tsx  routeTree.gen.ts  router.tsx
apps/desktop/frontend/src/components/: connection-status.tsx  page-header.tsx  theme-toggle.tsx  title-bar.tsx
apps/desktop/frontend/src/components/ui/: input.tsx  panel.tsx
apps/desktop/frontend/src/hooks/: use-ipc.ts
apps/desktop/frontend/src/lib/: api.ts  ipc.ts  query-client.ts
apps/desktop/frontend/src/routes/: __root.tsx  index.tsx  ipc.tsx
apps/desktop/src/: main.cc
apps/desktop/src/core/app/: browser_app.cc  tray_launcher.cc  tray_launcher.h
apps/desktop/src/core/common/: app_scheme.cc
apps/desktop/src/core/ipc/: ipc_router.cc  ipc_router.h
apps/desktop/src/core/window/: window_delegate.cc
apps/desktop/src/features/window/: window_feature.cc
apps/tray/: CMakeLists.txt
apps/tray/src/: backend_linux.cc  backend_macos.mm  backend_windows.cc  main.cc  single_instance.cc  single_instance.h  tray_app.cc  tray_app.h  tray_backend.h
cmake/: CPackOptions.cmake  DownloadCEF.cmake  Packaging.cmake  PruneLocales.cmake
docs/: daemon-protocol.md  packaging.md
libs/core/: CMakeLists.txt
libs/core/include/hestia/: app_info.h.in  helper.h  logging.h
libs/core/src/: helper.cc  logging.cc
libs/engine/src/: config.cc
libs/shared/: CMakeLists.txt
libs/shared/include/hestia/: logging.h
libs/shared/include/hestia/client/: client.h
libs/shared/include/hestia/ipc/: endpoint.h  errors.h  process.h  process_codec.h  protocol.h  topics.h  transport.h
libs/shared/src/: client.cc  logging.cc  process_codec.cc  protocol.cc  transport_posix.cc  transport_windows.cc
libs/tui/: CMakeLists.txt
libs/tui/src/: app_context.h  tui_app.cc
libs/tui/src/components/: text_field.cc  text_field.h
libs/tui/src/layout/: status_bar.cc
libs/tui/src/navigation/: navigator.cc  navigator.h  view.h
libs/tui/src/theme/: theme.h
libs/tui/src/views/: home_view.cc  home_view.h  settings_view.cc
packaging/windows/: license.rtf
packaging/windows/wix/: path_env.xml
tests/engine/: config_test.cc
